--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 This repository is to hold test images and code to test and apply several Open Source image analysis packages. It is a "work in progress"
 
-This code is released under the GPL 3.0. You are free to modify this and use it. Please report issues to jrminter@rochester.rr.com 
+This code is released under the GPL. You are free to modify this and use it. Please report issues to jrminter@rochester.rr.com 
 
 Constructive comments and suggestions are welcomed.
