--- a/dtsa2/index.Rmd
+++ b/dtsa2/index.Rmd
@@ -9,13 +9,17 @@ Our goal is to get ***consistent*** detectors and
 standards. At the moment, much of this is kludgy.
 DTSA seems to make it hard to change some of the
 defaults. My long term goal is to be able to create
-a reproducible environment from jython scripts that
+a reproducible environment from Jython scripts that
 set up instruments, detectors, and standards from
 version control.
 
 # Initial setup
 
 ## Instrument/Detector setup
+
+Note: I did try saving a 7zip archive of a base system
+set up this way. We'll see if it is a useful alternative.
+I'm not sure where DTSA stores directory preferences.
 
 1. Start with a ***clean install***. Use Nicholas Ritchie's
    deleteDetector.py Jython script to
@@ -29,7 +33,14 @@ version control.
    - ``FEI FIB 620`` (5-30kV) importing 
       ``2-FEI FIB 620 EDAX-RTEM.xdet``.
    - ``NIST JXA8500F`` (5-30kV) importing 
-      ``3-NIST JXA8500F Brucker-SDD.xdet``.
+      ``3-NIST JXA8500F Brucker-SDD.xdet``. We
+      add this detecor to be able to work the
+      DTSA examples.
+      
+   Note that one needs to start an edit after the
+   ``Add`` instrument button is pressed before changing
+   to another window to copy. Otherwise, the edit
+   box is non-responsive.
 
 Note that detectors can be imported from the
 ``$GIT_HOME/OSImageAnalysis/dtsa2/detectors``
@@ -50,8 +61,11 @@ directly from the scripts.
 
 These are useful for scripts and lets you use
 relative paths that don't break across systems.
+Note that one should use ``/`` instead of ``\\`` 
+on Windows as Linux/MacOSX. ***None*** of these are
+terminated with a ``/`` .
 
-1. ``HOME`` (typically already exists on *nix)
+1. ``HOME`` (typically already exists on Linux/MacOSX)
 2. ``GIT_HOME`` root directory for repositories from github.
     You ***do*** use git...
 3. ``IMG_ROOT`` root directory for image storage.
