some more mayavi examples

--- a/py2/vmrl/testMayavi.ipynb
+++ b/py2/vmrl/testMayavi.ipynb
@@ -51,7 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:/Users/jrminter/Documents/git/OSImageAnalysis/images/vrml/cone.wrl\n"
+      "/Users/jrminter/git/OSImageAnalysis/images/vrml/cone.wrl\n"
      ]
     }
    ],
